--- a/src/app/Noya-Apps/QueriesList/QueriesList.component.html
+++ b/src/app/Noya-Apps/QueriesList/QueriesList.component.html
@@ -29,6 +29,10 @@
       <input matInput [formControl]="filterSubSubject" placeholder="סינון לפי נושא משנה">
     </mat-form-field>
     <mat-form-field appearance="fill">
+      <mat-label>נוצר עבור</mat-label>
+      <input matInput [formControl]="filterCreatedFor" placeholder="סינון לפי נוצר עבור">
+    </mat-form-field>
+    <mat-form-field appearance="fill">
       <mat-label>סטטוס</mat-label>
       <mat-select [formControl]="filterStatus">
         <mat-option value="">כולם</mat-option>
@@ -55,6 +59,7 @@
 
       <!-- Data Columns -->
       <ng-container *ngFor="let col of displayedColumns" [matColumnDef]="col">
+        
         <th mat-header-cell *matHeaderCellDef mat-sort-header>{{ headerLabels[col] }}</th>
         <td mat-cell *matCellDef="let row">
           <ng-container [ngSwitch]="col">
@@ -84,7 +89,7 @@
       <tr mat-row *matRowDef="let row; columns: displayedColumnsWithSelect;"></tr>
 
     </table>
+  </div>
 
     <mat-paginator [pageSizeOptions]="[5,10,20]" showFirstLastButtons></mat-paginator>
-  </div>
 </div>
