--- a/src/app/chameleon-reports/med-execution-table/med-execution-table.component.html
+++ b/src/app/chameleon-reports/med-execution-table/med-execution-table.component.html
@@ -1,7 +1,7 @@
 <div class="body">
   <div class="nine">
     <h1>
-      {{ titleUnit }}<span>{{ Title1 }}{{ Title2 }}{{ totalResults }}</span>
+     <span>{{ Title2 }}{{ totalResults }}</span>
     </h1>
   </div>
 
