--- a/src/app/chameleon-reports/med-execution-table/med-execution-table.component.scss
+++ b/src/app/chameleon-reports/med-execution-table/med-execution-table.component.scss
@@ -331,3 +331,7 @@ button i.material-icons {
 .hover-area:hover + .creator-message {
     display: block;
 }
+.body {
+    margin-top: 50px;
+    margin-bottom: 50px;
+}
